--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -35,7 +35,7 @@ layout: default
         }
     };
 </script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script id="MathJax-script" defer src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
 
 <script src="https://utteranc.es/client.js"
         repo="djspacewhale/djspacewhale.github.io"
